fixed layout issues with changing viewboxes

--- a/static/style.css
+++ b/static/style.css
@@ -1,59 +1,70 @@
 html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
 body {
-    font-family: Helvetica;
-    font-size: 13px;
-    margin: 0;
-    height: 100%;
-  }
-  
+  font-family: Helvetica;
+  font-size: 13px;
+  margin: 0;
+  height: 100%;
+}
+
 .menu {
-    margin-top: 30px;
-    margin-right: 20px;
-    font-family: "Helvetica Neue", Helvetica;
-  }
+  margin-top: 30px;
+  margin-right: 20px;
+  font-family: "Helvetica Neue", Helvetica;
+}
 
 .menu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
 .menu li a {
-    display: inline-block;
-    color: #0864c7;
-  }
+  display: inline-block;
+  color: #0864c7;
+}
 
 #content {
-    margin-top: 20px;
-    float: left;
-    max-width: 1000px;
-    height: auto;
-    padding:5px;
+  margin-top: 20px;
+  float: left;
+  max-width: 600px;
+  padding: 5px;
+  margin-right: 10px;
+}
+
+#contentbox {
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
 }
 
 #subline {
-    margin:0 auto;
-    position: relative;
-    bottom: 8px;
-    padding-top: 10px;
-    text-align: center;
+  display: flex;
+  margin: 0 auto;
+  padding-top: 10px;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+#footer {
+  display: flex;
+  flex-direction: column;
 }
 
 .column {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    flex-wrap: wrap-reverse;
-    flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex-wrap: wrap-reverse;
 }
